--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
       <img src="logo.jpg" alt="Logo" class="w-12 h-12" />
       <h1 class="text-2xl font-bold uppercase">Carritos Fiesteros</h1>
     </div>
-    <nav class="space-x-4 text-sm font-semibold">
-      <a href="Indexx.html">INICIO</a>
-      <a href="nosotros.html">¿QUIÉNES SOMOS?</a>
-      <a href="menu.html">NUESTRO MENÚ</a>
-      <a href="tematicos.html">CARRITOS TEMÁTICOS</a>
-      <a href="sumale.html">SÚMALE SABOR</a>
-      <a href="contacto.html">CONTACTO</a>
-    </nav>
+   <nav class="space-x-4 text-sm font-semibold">
+  <a href="index.html">INICIO</a>
+  <a href="nosotros.html">¿QUIÉNES SOMOS?</a>
+  <a href="menu.html">NUESTRO MENÚ</a>
+  <a href="tematicos.html">CARRITOS TEMÁTICOS</a>
+  <a href="sumale.html">SÚMALE SABOR</a>
+  <a href="contacto.html">CONTACTO</a>
+</nav>
+
   </header>
 
   <!-- SECCIÓN DE INICIO -->
