--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
     <h1 class="text-2xl font-bold">Carritos Fiesteros</h1>
   </div>
   <nav class="space-x-4 text-sm font-semibold">
-    <a href="Indexx.html">Inicio</a>
+    <a href="index.html">Inicio</a>
     <a href="nosotros.html">Sobre Nosotros</a>
     <a href="menu.html">Menú</a>
     <a href="tematicos.html">Carritos Temáticos</a>
