--- a/nosotros.html
+++ b/nosotros.html
@@ -23,7 +23,7 @@
       <h1 class="text-2xl font-bold uppercase">Carritos Fiesteros</h1>
     </div>
     <nav class="space-x-4 text-sm font-semibold">
-      <a href="Indexx.html">INICIO</a>
+      <a href="index.html">INICIO</a>
       <a href="nosotros.html">¿QUIÉNES SOMOS?</a>
       <a href="menu.html">NUESTRO MENÚ</a>
       <a href="tematicos.html">CARRITOS TEMÁTICOS</a>
